added target blank to footer

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -84,7 +84,7 @@
     </div>
     <p class="cp">
         <span
-            >Created By <a href="https://saptarshi-personal.herokuapp.com/">Saptarshi Sarkar</a> <br>
+            >Created By <a href="https://saptarshi-personal.herokuapp.com/" target="_blank">Saptarshi Sarkar</a> <br>
             <span class="far fa-copyright"></span> 2021 All rights
             reserved.</span
         >
